--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
         "axios": "^0.18.0",
         "delay": "^3.0.0",
         "history": "^4.7.2",
+        "prop-types": "^15.6.2",
         "react": "^16.4.2",
         "react-bootstrap": "^0.32.2",
         "react-calendar": "^2.17.1",
         "react-dom": "^16.4.2",
         "react-dropzone": "^5.1.0",
         "react-redux": "^5.0.7",
+        "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "1.1.4",
         "react-spring": "^5.6.6",
